# Copyright (C) 2025 by Jamie Cui
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "yacl-aead"
version = "0.1.0"
edition = "2021"
description = "AEAD (Authenticated Encryption with Associated Data) - Rust port of yacl AEAD module"
license = "Apache-2.0"

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
aes-gcm-siv = "0.11"
ctr = "0.9"
ghash = "0.5"
cipher = { version = "0.4", features = ["block-padding"] }
serde = { version = "1.0", features = ["derive"], optional = true }
yacl-rand = { path = "../yacl-rand", optional = true }

[features]
default = ["serde"]
serde = ["dep:serde"]

[dev-dependencies]
hex = "0.4"
