# Copyright (C) 2025 by Jamie Cui
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "yacl-math"
version = "0.1.0"
edition = "2021"
description = "Cryptographic math utilities - Rust port of yacl math module"
license = "Apache-2.0"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "2.0"

[features]
default = ["serde"]
serde = ["dep:serde", "num-bigint/serde"]

[dev-dependencies]
rand_chacha = "0.3"
