# Copyright (C) 2025 by Jamie Cui
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "hmac"
version = "0.1.0"
edition = "2021"
description = "HMAC implementations - Rust port of yacl hmac module"
license = "Apache-2.0"

[dependencies]
hash = { path = "../hash" }
hmac_ext = { package = "hmac", version = "0.12" }
sha2 = "0.10"
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["serde"]
serde = ["dep:serde"]

[dev-dependencies]
hex = "0.4"
