# Copyright (C) 2025 by Jamie Cui
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "rand"
version = "0.1.0"
edition = "2021"
description = "Cryptographically secure random number generation - Rust port of yacl rand module"
license = "Apache-2.0"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"], optional = true }
math = { path = "../math" }

[features]
default = ["serde"]
serde = ["dep:serde"]

[dev-dependencies]
hex = "0.4"
