# Copyright (C) 2025 by Jamie Cui
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "sign"
version = "0.1.0"
edition = "2021"
description = "Digital signatures - Rust port of yacl signature module"
license = "Apache-2.0"

[dependencies]
rsa = "0.9"
sha2 = "0.10"
ed25519 = "2"
ed25519-dalek = "2"
signature = "2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"], optional = true }
# rand = { path = "../rand" }
hash = { path = "../hash", optional = true }

[features]
default = ["serde"]
serde = ["dep:serde"]

[dev-dependencies]
hex = "0.4"
